# operator-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  rebuild_db.py  requirements.txt  start.bat  start.sh
.claude/: settings.json
.claude/agents/: build-error-resolver.md  refactor-cleaner.md
config/: semantic_value_rules.yaml  task_config.yaml
data/: operator_agent.db
docs/: aclnnflow.html  architecture-redesign.md  cast-scheme.html  cc-check.html  flow.html  optional.html  param_relation-schema.html  project_summary.html  project_summary.md  qwen-scheme.html  result.json  single-function.html
docs/aclnnAdaLayerNorm/: aclnnAdaLayerNorm_cases.json  aclnnAdaLayerNorm_extracted_constraints.json
docs/prompts-help/: prompts.md
docs/self-prompts/: extract.md
executor/: aclnn-cpu-golden-derivation.md  generator.py
knowledge/allowed_range/: SKILL.md
knowledge/dimensions/: SKILL.md
knowledge/implicit_params/: SKILL.md
knowledge/operator-constraint-checker/: SKILL.md  param-alias.md
knowledge/relation_skills/: SKILL.md  alignment_constraint.md  conditional_constraint.md  dtype_equality.md  enum_conditional_shape.md  intra_tensor_ordering.md  multi_shape_choice.md  mutual_exclusion.md  presence_dependency.md  self_constraint.md  tensorlist_length.md
operators/: aclnnAddRmsNorm.md  aclnnBatchNormElemt.md
operators/cv/: aclnnBackgroundReplace.md  aclnnBlendImagesCustom.md  aclnnGridSampler2D.md  aclnnGridSampler2DBackward.md  aclnnGridSampler3D.md  aclnnGridSampler3DBackward.md  aclnnIou.md  aclnnMrgbaCustom.md  aclnnResize.md  aclnnRoiAlign.md  aclnnRoiAlignV2.md  aclnnRoiAlignV2Backward.md  aclnnThreeInterpolateBackward.md  aclnnUpsampleBicubic2d.md  aclnnUpsampleBicubic2dAA.md  aclnnUpsampleBicubic2dAAGrad.md  aclnnUpsampleBicubic2dBackward.md  aclnnUpsampleBilinear2d.md  aclnnUpsampleBilinear2dAA.md  aclnnUpsampleBilinear2dAABackward.md  aclnnUpsampleBilinear2dBackward.md  aclnnUpsampleBilinear2dBackwardV2.md  aclnnUpsampleLinear1d.md  aclnnUpsampleLinear1dBackward.md  aclnnUpsampleNearest1d.md  aclnnUpsampleNearest1dBackward.md  aclnnUpsampleNearest1dV2.md  aclnnUpsampleNearest2d.md  aclnnUpsampleNearest2dBackward.md  aclnnUpsampleNearest2dV2.md  aclnnUpsampleNearest3d.md  aclnnUpsampleNearest3dBackward.md  aclnnUpsampleNearestExact1d.md  aclnnUpsampleNearestExact1dBackward.md  aclnnUpsampleNearestExact2d.md  aclnnUpsampleNearestExact2dBackward.md  aclnnUpsampleNearestExact3d.md  aclnnUpsampleNearestExact3dBackward.md  aclnnUpsampleTrilinear3d.md  aclnnUpsampleTrilinear3dBackward.md
operators/math/: aclnnAbs.md  aclnnAcos&aclnnInplaceAcos.md  aclnnAcosh&aclnnInplaceAcosh.md  aclnnAdd&aclnnInplaceAdd.md  aclnnAddLora.md  aclnnAddcdiv&aclnnInplaceAddcdiv.md  aclnnAddcmul&aclnnInplaceAddcmul.md  aclnnAddr&aclnnInplaceAddr.md  aclnnAll.md  aclnnAmax.md  aclnnAmin.md  aclnnAminmax.md  aclnnAminmaxAll.md  aclnnAminmaxDim.md  aclnnAny.md  aclnnArange.md  aclnnArgMax.md  aclnnArgMin.md  aclnnAsin&aclnnInplaceAsin.md  aclnnAsinh&aclnnInplaceAsinh.md  aclnnAtan&aclnnInplaceAtan.md  aclnnAtan2&aclnnInplaceAtan2.md  aclnnAtanh&aclnnInplaceAtanh.md  aclnnBatchNormStats.md  aclnnBitwiseAndScalar.md  aclnnBitwiseAndTensor.md  aclnnBitwiseNot.md  aclnnBitwiseOrScalar&aclnnInplaceBitwiseOrScalar.md  aclnnBitwiseOrTensor&aclnnInplaceBitwiseOrTensor.md  aclnnBitwiseXorScalar&aclnnInplaceBitwiseXorScalar.md  aclnnBitwiseXorTensor&aclnnInplaceBitwiseXorTensor.md  aclnnCast.md  aclnnCat.md  aclnnCeil&aclnnInplaceCeil.md  aclnnChannelShuffle.md  aclnnClamp.md  (+175 more)
scripts/: batch_verify.py  clean_all_data.py  clean_all_data.sql
tests/: conftest.py
(+561 files in other folders)
