[project]
name = "operator-agent-workspace"
version = "0.1.0"
description = "Monorepo workspace for operator-agent system"
requires-python = ">=3.12"
dependencies = [
    # shared
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    # mcp-server
    "mcp>=1.0",
    "aiosqlite>=0.20",
    "markdown-it-py[plugins]>=3.0",
    # agent
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic-settings>=2.0",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "deepagents>=0.6",
    "asyncssh>=2.14",
    "openpyxl>=3.1",
    # scientific computing & test generation
    "numpy>=1.26",
    "scipy>=1.12",
    "z3-solver>=4.12",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["packages/shared/src", "packages/mcp-server/src", "packages/agent/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/shared/src",
    "packages/mcp-server/src",
    "packages/agent/src",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
